--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>ufcarc</title>
+    <link rel="shortcut icon" type="image/ico" href="../../static/favicon.ico" />
+    <title>PokeArc</title>
   </head>
   <body>
     <div id="app"></div>
