--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons">
-    <link rel="shortcut icon" type="image/ico" href="../../static/favicon.ico" />
+    <link rel="shortcut icon" type="image/ico" href="/static/favicon.ico" />
     <title>PokeArc</title>
   </head>
   <body>
