--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic|Material+Icons">
     <link rel="shortcut icon" type="image/ico" href="static/favicon.jpg" />
+    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <title>PokeArc</title>
   </head>
